<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoTo</string>
    <string name="headerText">GoTo takes you where</string>
    <string name="oneWay">One Way  </string>
    <string name="rturn">Return  </string>
    <string name="custom">Custom  </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="fromStations">
        <item>From Station</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    
   	<string-array name ="toStations">
   	    <item>To Station</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
   	</string-array>
   	<string name="minutes">Minutes</string>
   	<string name="arrival">Arrival</string>
   	<string name="line">Line</string>
   	<string name="operator">Operator</string>
   	<string name="cost">Cost</string>
   	<string name="time">Time</string>
   	<string name="date">Date</string>

</resources>
