<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/headerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="15dp"
        android:text="@string/headerText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/oneWayButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:background="@drawable/customradiobuttons"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/glyphicons_211_right_arrow"
            android:paddingBottom="9dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="9dp"
            android:text="@string/oneWay"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/returnButton"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/oneWayButton"
            android:layout_marginLeft="5dp"
            android:background="@drawable/customradiobuttons"
            android:button="@android:color/transparent"
            android:checked="false"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/glyphicons_457_transfer"
            android:paddingBottom="7dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="9dp"
            android:text="@string/rturn"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/customButton"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/returnButton"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/customradiobuttons"
            android:button="@android:color/transparent"
            android:checked="false"
            android:drawablePadding="2dp"
            android:drawableRight="@drawable/glyphicons_066_tags"
            android:paddingBottom="7dp"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:paddingTop="7dp"
            android:text="@string/custom"
            android:textSize="15sp" />

    </RelativeLayout>

    <Spinner
        android:id="@+id/fromSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp" />

    <Spinner
        android:id="@+id/toSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    
	<RelativeLayout 
	    android:id="@+id/relativeLayout2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/dateEditText"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="24dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        bootstrapbutton:be_roundedCorners="true"
        android:visibility="gone"
        android:text="@string/date" />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/timeEditText"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        bootstrapbutton:be_roundedCorners="true"
        android:text="@string/time" />

    <ImageButton
        android:id="@+id/calendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@+id/timeEditText"
        android:layout_toRightOf="@+id/timeEditText"
        android:layout_alignTop="@+id/timeEditText"
        android:src="@drawable/glyphicons_045_calendar" />

	</RelativeLayout>


	<TableLayout
	    android:id="@+id/stationTable"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="1dp"
	    android:layout_marginRight="1dp"
	    android:layout_marginTop="25dp"
	    android:visibility="gone"
	    android:layout_gravity="center" >
	  
                <TableRow android:id="@+id/tableRow1" android:layout_width="match_parent" android:layout_height="wrap_content">

                    <TextView android:textSize="16sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/minutes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/minutes"></TextView>
                    <TextView android:textSize="16sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/arrival" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/arrival"></TextView>
                    <TextView android:textSize="16sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/line" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/line"></TextView>
                    <TextView android:textSize="16sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/operator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/operator"></TextView>
                    <TextView android:textSize="16sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/cost" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/cost"></TextView>
                    

                </TableRow>
                <TableRow android:id="@+id/tableRow2" android:layout_width="match_parent" android:layout_height="wrap_content">                    

                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/minutes1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/arrival1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/line1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/operator1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/cost1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView></TableRow>

                <TableRow android:id="@+id/tableRow3" android:layout_width="match_parent" android:layout_height="wrap_content">                    

                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/minutes2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/arrival2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/line2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/operator2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/cost2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    
                </TableRow>
                <TableRow android:id="@+id/tableRow4" android:layout_width="match_parent" android:layout_height="wrap_content">                    
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/minutes3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/arrival3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/line3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/operator3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/cost3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                   
                </TableRow>
                
                <TableRow android:id="@+id/tableRow5" android:layout_width="match_parent" android:layout_height="wrap_content">                    

                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/minutes4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/arrival4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/line4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/operator4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/cost4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    
                </TableRow>
                
                <TableRow android:id="@+id/tableRow6" android:layout_width="match_parent" android:layout_height="wrap_content">                    

                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/minutes5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/arrival5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/line5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/operator5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    <TextView android:textSize="14sp" android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/cost5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="TextView"></TextView>
                    
                </TableRow>

            </TableLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >

	<Button
	    android:id="@+id/takeMeButton"
	    android:background="@drawable/takemebutton"
	    android:layout_width="280dp"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="15dp"
	    android:layout_marginTop="5dp"
	    android:text="Take Me" >
	</Button>

	</RelativeLayout>
	
</LinearLayout>